Fix notification overflowing with long strings

--- a/src/common/notificator/user/_userNotificator.scss
+++ b/src/common/notificator/user/_userNotificator.scss
@@ -1,5 +1,5 @@
 .app-UserNotificator {
-  height: 60px;
+  min-height: 60px;
   width: 100%;
   background-color: #73c0ff;
   position: relative;
